🎨 style(css): ajusta o tamanho da fonte para os elementos .nome__musica e .nome__banda 🐛 fix(script.js): atualiza a mensagem de erro ao buscar dados do clima O tamanho da fonte dos elementos .nome__musica e .nome__banda foi ajustado para melhorar a legibilidade e o design da página. Além disso, a mensagem de erro exibida ao buscar dados do clima foi atualizada para fornecer uma mensagem mais amigável aos usuários.

--- a/css/style.css
+++ b/css/style.css
@@ -260,7 +260,7 @@
     .nome__musica {
         margin: 0;
         color: #ffffff;
-        font-size: 16px;
+        font-size: 14px;
         line-height: normal;
         text-align: start;
         letter-spacing: normal;
@@ -274,7 +274,7 @@
     .nome__banda {
         margin: 0;
         color: #ffffff;
-        font-size: 12px;
+        font-size: 11px;
         line-height: normal;
         text-align: start;
         letter-spacing: normal;
